--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <section class="hero">
     <div class="hero-content">
         <div class="hero-text">
-            <p class="intro-text1">Hello! <br> I'm Mariana Anastácio</p>
+            <!-- <p class="intro-text1">Hello! <br> I'm Mariana Anastácio</p> -->
             <h2 class="title">3D Generalist</h2>
             <p class="specialty-text">specializing in Product Animation and Visualization.</p>
             <button class="scroll-btn" id="scrollBtn">
@@ -66,14 +66,29 @@
 </section>
 
 <!-- Intro Section -->
-<section class="intro-section">
+<section class="intro-section" id="intro-section">
     <div class="intro-container">
         <div class="intro-text">
-            <p>I can help you bring your ideas to life with realistic (or not) 3D graphics. <br> If you need <strong>engaging 3D content for your brand or project,</strong> from 3D <br> Animation & Visualization to 3D Graphics & Illustration, I'd be happy to help!</p>
+            <p>I can help you bring your ideas to life with realistic (or not) 3D graphics. <br> If you need <strong>engaging 3D content for your brand or project,</strong> from 3D <br> Modeling & Animation to 3D Graphics & Illustration, I'd be happy to help!</p>
         </div>
         <div class="intro-icon-wrapper">
             <img src="StrokeIconRot.png" alt="Intro icon" class="rotating-icon">
         </div>
+    </div>
+</section>
+
+<!-- Services Section -->
+<section class="services-section">
+    <h2>SERVICES<img src="wheel1.png" alt="Wheel Icon"></h2>
+    <div class="services-list">
+      <button>3D Modeling</button>
+      <button>3D Animation</button>
+      <button>Product Animation</button>
+      <button style="visibility: hidden;"></button> <!-- Invisible button to force row break -->
+      <div class="second-row">
+        <button>Dynamics Simulations</button>
+        <button>3D Illustration</button>
+      </div>
     </div>
 </section>
 
